--- a/task-manager-ui/package.json
+++ b/task-manager-ui/package.json
@@ -10,19 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/cdk": "^17.3.8",
+    "@angular/animations": "^17.3.8",
+    "@angular/cdk": "^17.3.9",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
-    "@angular/material": "^17.3.8",
+    "@angular/material": "^17.3.9",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
+    "ag-grid-angular": "^31.3.2",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "mdbootstrap": "^4.20.0",
