--- a/task-manager/src/main/resources/application-prod.properties
+++ b/task-manager/src/main/resources/application-prod.properties
@@ -1,7 +1,13 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres_database:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+taskmanager.security.secret=ThisIsATestSecret
+taskmanager.security.transformation=AES
+taskmanager.jwt.secret=TestSecret
+# Expiration ~ 10 Hours
+taskmanager.jwt.expiration=36000000
