--- a/task-manager/src/test/resources/application-test.properties
+++ b/task-manager/src/test/resources/application-test.properties
@@ -1,2 +1,8 @@
 taskmanager.security.secret=ThisIsATestSecret
 taskmanager.security.transformation=AES
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
