Filtering and sorting in backend and frontend

--- a/task-manager-ui/angular.json
+++ b/task-manager-ui/angular.json
@@ -43,7 +43,9 @@
               "node_modules/ag-grid-community/styles/ag-theme-quartz.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+            ]
           },
           "configurations": {
             "production": {
