--- a/task-manager/src/main/resources/application-prod.properties
+++ b/task-manager/src/main/resources/application-prod.properties
@@ -11,3 +11,9 @@ taskmanager.security.transformation=AES
 taskmanager.jwt.secret=TestSecret
 # Expiration ~ 10 Hours
 taskmanager.jwt.expiration=36000000
+
+spring.mail.host=mailhog
+spring.mail.port=1025
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.properties.mail.transport.protocol=smtp
