--- a/task-manager/src/test/resources/application.properties
+++ b/task-manager/src/test/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 taskmanager.jwt.secret=TestSecret
 # Expiration ~ 10 Hours
 taskmanager.jwt.expiration=36000000
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
